fixed sidebar overflow when menu is opening and closing

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -95,6 +95,7 @@ body {
 
 .container {
   display: flex;
+  overflow: hidden;
 }
 
 .sidebar {
